crates/toml/tests/snapshots/invalid/inline-table/empty-03.stderr
TOML parse error at line 1, column 6
  |
1 | t = {
  |      ^
newlines are unsupported in inline tables, expected nothing

---
TOML parse error at line 2, column 1
  |
2 | ,
  | ^
extra comma in inline table, expected key

---
TOML parse error at line 2, column 2
  |
2 | ,
  |  ^
newlines are unsupported in inline tables, expected nothing
